--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "modules": "^0.4.0",
     "mongoose": "^4.13.12",
+    "python-shell": "^0.5.0",
     "query-string": "^6.0.0",
     "websocket": "^1.0.25"
   }
