--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.13.12",
     "python-shell": "^0.5.0",
     "query-string": "^6.0.0",
+    "socket.io": "^2.1.0",
     "websocket": "^1.0.25"
   }
 }
