--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modules": "^0.4.0",
     "mongoose": "^4.13.12",
     "multer": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.16",
     "python-shell": "^0.5.0",
     "query-string": "^6.0.0",
     "socket.io": "^2.1.0",
